feat: finish queue crud