@@ -1,5 +1,6 @@
 package com.renanresende.bridgetotalk.adapter.out.jpa.spec;
 
+import org.apache.commons.lang3.StringUtils;
 import org.springframework.data.domain.Sort;
 
 import java.util.Set;
@@ -12,8 +13,14 @@ public class SortParams {
             "createdAt"
     );
 
-    public static String validateFieldToSortAgent(String sortBy) {
-        if (sortBy == null || sortBy.isBlank() || !ALLOWED_FIELDS_TO_SORT_AGENTS.contains(sortBy))
+    private static final Set<String> ALLOWED_FIELDS_TO_SORT_QUEUES = Set.of(
+            "name",
+            "createdAt"
+    );
+
+
+    public static String validateFieldToSort(String sortBy, String entityName) {
+        if (StringUtils.isBlank(sortBy) || notContainsAllowedField(sortBy, entityName))
             return "name";
 
         return sortBy;
@@ -27,5 +34,18 @@ public class SortParams {
             case "desc" -> Sort.Direction.DESC;
             default -> Sort.Direction.ASC;
         };
+    }
+
+    private static boolean notContainsAllowedField(String sortBy, String entityName) {
+        return !getAllowedFieldsToSort(entityName).contains(sortBy);
+    }
+
+    private static Set<String> getAllowedFieldsToSort(String entityName) {
+
+        switch (entityName) {
+            case "queue": return ALLOWED_FIELDS_TO_SORT_QUEUES;
+            case "agent": return ALLOWED_FIELDS_TO_SORT_AGENTS;
+            default: return Set.of();
+        }
     }
 }
